infrastructure/config/listmonk/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: listmonk
  labels:
    app.kubernetes.io/name: listmonk
    app.kubernetes.io/managed-by: flux
